PyQuest/src/test/parsing/valid/test005.ql
// Form with question of type money
form label {
  "Question?"
    var: money
}