PyQuest/src/test/parsing/invalid/test006.ql
form label {
    "Question?"
    var : cows
}